# dexarb

./: .gitignore  README.md
config/: paper_trading.toml  paper_trading_phase1.toml  pools_whitelist.json
config/base/: pools_whitelist.json
config/polygon/: pools_whitelist.json
docs/: 12_scenario_parameter_analysis.md  MULTI_CHAIN_ARCHITECTURE.md  QUICKSWAP_V3_INTEGRATION.md  SESSION_LOG_20260127.md  alloy_port_plan.md  base_next_steps.md  crypto_arbitrage_tax_guide.md  dex-arbitrage-complete-strategy.md  hetzner_bor_architecture.md  master_plan.md  mev_research_findings.md  multi_config_paper_trading.md  next_steps.md  node-sync-deadtime-prep-guide.md  phase_1_2_optimization_plan.md  pool_expansion_catalog.md  pre_100_deployment_checklist.md  private_rpc_polygon_research.md  setup.sh  v4_alternate_pairings_buildout.md  verification_checklist.md  verification_report_2026-01-28.md
docs/archive/: ENHANCED_VERIFIER_DOCS.md  a4_mempool_monitor_plan.md  additional_opportunities_expansion.md  alloy_port_plan.md  checklist_results.md  component_mapping_guide.md  executive_summary.md  multi_rpc_implementation.md  phantom_spread_analysis.md  phase1_execution_checklist.md  phase1_implementation_plan.md  polygon-bor-setup-guide.md  update_summary  v4_alternate_pairings_buildout.md
docs/logging/: tax_logging_implementation_plan.md
docs/session_summaries/: 2026-01-28_paper_trading_implementation.md  2026-01-29_phase1_1_whitelist.md  (+8 more)
reports/: paper_trading_report_20260128.md
scripts/: analyze_bot_session.py  analyze_dedup_corrected.py  analyze_mempool.py  analyze_mempool_executions.py  analyze_price_log.py  analyze_price_logs.py  analyze_trade_sizes.py  base_gas_killswitch.sh  base_pool_scanner.py  bot_status_discord.sh  bot_watch.sh  checklist_full.sh  checklist_section1.sh  checklist_section2.sh  checklist_section3.sh  checklist_section4.sh  checklist_section5_10.sh  depth_assessment.py  hourly_discord_report.py  monitor_trade.sh  pnl_projection.py  pool_gate_check.py  pool_scanner.py  spread_logger.py  stop_after_trade.sh  swap_usdc.py  verify_quickswap_pools.py  verify_v2_pools.py  verify_whitelist.py  verify_whitelist_enhanced.py
src/rust-bot/: .env.example  .gitignore  Cargo.toml
src/rust-bot/src/: config.rs  contracts.rs  lib.rs  main.rs  price_logger.rs  types.rs
src/rust-bot/src/arbitrage/: cooldown.rs  detector.rs  executor.rs  mod.rs  multicall_quoter.rs
src/rust-bot/src/data_collector/: mod.rs  shared_state.rs
src/rust-bot/src/filters/: mod.rs  whitelist.rs
src/rust-bot/src/mempool/: decoder.rs  mod.rs  monitor.rs  simulator.rs  types.rs
src/rust-bot/src/paper_trading/: collector.rs  config.rs  discord_alerts.rs  engine.rs  executor.rs  metrics.rs  mod.rs  strategy.rs  toml_config.rs
src/rust-bot/src/pool/: calculator.rs  mod.rs  state.rs  syncer.rs  v2_syncer.rs  v3_syncer.rs
src/rust-bot/src/tax/: csv_logger.rs  json_logger.rs  mod.rs  price_oracle.rs  rp2_export.rs
(+23 files in other folders)
