[package]
name = "dexarb-bot"
version = "0.1.0"
edition = "2021"
description = "Phase 1 DEX Arbitrage Bot - Polygon"

[dependencies]
# Core Ethereum interaction (ethers-rs)
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenv = "0.15"
toml = "0.8"

# Signal handling (for SIGHUP reload)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Data structures
dashmap = "5.5"
once_cell = "1.19"

# Numeric computations
rust_decimal = "1.33"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Discord webhooks (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Optional: Discord bot (full framework)
serenity = { version = "0.12", optional = true, default-features = false, features = ["client", "gateway", "model"] }

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.33"

[features]
default = []
discord = ["serenity"]

[[bin]]
name = "dexarb-bot"
path = "src/main.rs"

[[bin]]
name = "paper-trading"
path = "src/bin/paper_trading.rs"

[[bin]]
name = "data-collector"
path = "src/bin/data_collector.rs"

[[bin]]
name = "tax-export"
path = "src/bin/tax_export.rs"
